// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/admin_console/manage_tokens_modal/manage_tokens_modal.tsx > initial call should match snapshot 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="manageTokensModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal manage-teams modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="manageTokensModalLabel"
            >
              Manage Personal Access Tokens
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <div>
              <div
                class="manage-teams__user"
              >
                <img
                  alt="some-user profile image"
                  class="Avatar Avatar-lg"
                  loading="lazy"
                  src="/api/v4/users/defaultuser/image"
                />
                <div
                  class="manage-teams__info"
                >
                  <div
                    class="manage-teams__name"
                  >
                    @some-user
                  </div>
                  <div
                    class="manage-teams__email"
                  />
                </div>
              </div>
              <div
                class="pt-3"
              >
                Personal access tokens function similarly to session tokens and can be used by integrations to 
                <a
                  href="https://api.mattermost.com/?utm_source=mattermost&utm_medium=in-product&utm_content=manage_tokens_modal&uid=&sid=&edition=team&server_version=#tag/authentication"
                  location="manage_tokens_modal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  interact with this Mattermost server
                </a>
                . Tokens are disabled if the user is deactivated. Learn more about 
                <a
                  href="https://mattermost.com/pl/personal-access-tokens?utm_source=mattermost&utm_medium=in-product&utm_content=manage_tokens_modal&uid=&sid=&edition=team&server_version="
                  location="manage_tokens_modal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  personal access tokens
                </a>
                .
              </div>
              <div
                class="manage-teams__teams"
              >
                <div
                  class="loading-screen"
                  style="position: relative;"
                >
                  <div
                    class="loading__content"
                  >
                    <p>
                      Loading
                    </p>
                    <div
                      class="round round-1"
                    />
                    <div
                      class="round round-2"
                    />
                    <div
                      class="round round-3"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/admin_console/manage_tokens_modal/manage_tokens_modal.tsx > should display list of tokens 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="manageTokensModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal manage-teams modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="manageTokensModalLabel"
            >
              Manage Personal Access Tokens
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <div>
              <div
                class="manage-teams__user"
              >
                <img
                  alt="some-user profile image"
                  class="Avatar Avatar-lg"
                  loading="lazy"
                  src="/api/v4/users/defaultuser/image"
                />
                <div
                  class="manage-teams__info"
                >
                  <div
                    class="manage-teams__name"
                  >
                    @some-user
                  </div>
                  <div
                    class="manage-teams__email"
                  />
                </div>
              </div>
              <div
                class="pt-3"
              >
                Personal access tokens function similarly to session tokens and can be used by integrations to 
                <a
                  href="https://api.mattermost.com/?utm_source=mattermost&utm_medium=in-product&utm_content=manage_tokens_modal&uid=&sid=&edition=team&server_version=#tag/authentication"
                  location="manage_tokens_modal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  interact with this Mattermost server
                </a>
                . Tokens are disabled if the user is deactivated. Learn more about 
                <a
                  href="https://mattermost.com/pl/personal-access-tokens?utm_source=mattermost&utm_medium=in-product&utm_content=manage_tokens_modal&uid=&sid=&edition=team&server_version="
                  location="manage_tokens_modal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  personal access tokens
                </a>
                .
              </div>
              <div
                class="manage-teams__teams"
              >
                <div
                  class="manage-teams__team"
                >
                  <div
                    class="manage-teams__team-name"
                  >
                    <div
                      class="whitespace--nowrap overflow--ellipsis"
                    >
                      Token Description: 
                      description
                    </div>
                    <div
                      class="whitespace--nowrap overflow--ellipsis"
                    >
                      Token ID: 
                      id1
                    </div>
                  </div>
                  <div
                    class="manage-teams__team-actions"
                  >
                    <button
                      class="btn btn-danger"
                      type="button"
                    >
                      Delete
                    </button>
                  </div>
                </div>
                <div
                  class="manage-teams__team"
                >
                  <div
                    class="manage-teams__team-name"
                  >
                    <div
                      class="whitespace--nowrap overflow--ellipsis"
                    >
                      Token Description: 
                      description
                    </div>
                    <div
                      class="whitespace--nowrap overflow--ellipsis"
                    >
                      Token ID: 
                      id2
                    </div>
                  </div>
                  <div
                    class="manage-teams__team-actions"
                  >
                    <button
                      class="btn btn-danger"
                      type="button"
                    >
                      Delete
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/admin_console/manage_tokens_modal/manage_tokens_modal.tsx > should replace loading screen on update 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="manageTokensModalLabel"
      class="fade in modal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal manage-teams modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="manageTokensModalLabel"
            >
              Manage Personal Access Tokens
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <div>
              <div
                class="manage-teams__user"
              >
                <img
                  alt="some-user profile image"
                  class="Avatar Avatar-lg"
                  loading="lazy"
                  src="/api/v4/users/defaultuser/image"
                />
                <div
                  class="manage-teams__info"
                >
                  <div
                    class="manage-teams__name"
                  >
                    @some-user
                  </div>
                  <div
                    class="manage-teams__email"
                  />
                </div>
              </div>
              <div
                class="pt-3"
              >
                Personal access tokens function similarly to session tokens and can be used by integrations to 
                <a
                  href="https://api.mattermost.com/?utm_source=mattermost&utm_medium=in-product&utm_content=manage_tokens_modal&uid=&sid=&edition=team&server_version=#tag/authentication"
                  location="manage_tokens_modal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  interact with this Mattermost server
                </a>
                . Tokens are disabled if the user is deactivated. Learn more about 
                <a
                  href="https://mattermost.com/pl/personal-access-tokens?utm_source=mattermost&utm_medium=in-product&utm_content=manage_tokens_modal&uid=&sid=&edition=team&server_version="
                  location="manage_tokens_modal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  personal access tokens
                </a>
                .
              </div>
              <div
                class="manage-teams__teams"
              >
                <div
                  class="manage-row__empty"
                >
                  No personal access tokens.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
